--- a/app/src/main/res/layout/main_my_user_view.xml
+++ b/app/src/main/res/layout/main_my_user_view.xml
@@ -45,7 +45,7 @@
         <TextView
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
-            android:id="@+id/user_loding"
+            android:id="@+id/user_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="未登录" />
