--- a/app/src/main/res/layout/activity_userinfo.xml
+++ b/app/src/main/res/layout/activity_userinfo.xml
@@ -79,7 +79,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_marginRight="10dp"
-                            android:src="@drawable/right_arrow" />
+                            android:src="@drawable/right_arrow"
+                            android:id="@+id/userinfo_icon"/>
 
                     </LinearLayout>
 
