--- a/app/src/main/res/layout/inchool_school_view.xml
+++ b/app/src/main/res/layout/inchool_school_view.xml
@@ -1,8 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="#01000000"
     android:orientation="vertical">
 
+    <com.gc.flashview.FlashView
+        android:id="@+id/flash_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_margin="5dp"
+        app:effect="cube" />
+
+    <LinearLayout
+        android:id="@+id/in_school_mid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:background="#abf">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/in_school_last"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="6"
+        android:background="#cba">
+
+    </LinearLayout>
 </LinearLayout>
