--- a/app/src/main/res/layout/inchool_school_view.xml
+++ b/app/src/main/res/layout/inchool_school_view.xml
@@ -20,6 +20,10 @@
         android:layout_weight="2"
         android:background="#abf">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/in_mid_school"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
     <LinearLayout
