--- a/app/src/main/res/layout/activity_userinfo.xml
+++ b/app/src/main/res/layout/activity_userinfo.xml
@@ -492,6 +492,11 @@
                             android:layout_gravity="center_vertical"
                             android:layout_marginRight="10dp"
                             android:src="@drawable/right_arrow" />
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/recycler_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            />
 
                     </LinearLayout>
                 </RelativeLayout>
