--- a/app/src/main/res/layout/person_fragment.xml
+++ b/app/src/main/res/layout/person_fragment.xml
@@ -278,7 +278,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="3dp"
-                android:background="#fffffc">
+                android:background="#fffffc"
+                android:id="@+id/person_usersetting">
 
                 <ImageView
                     android:layout_width="wrap_content"
