2017/03/18 AM11：39 1、修复保存信息会闪退的bug 2、向社会页面添加了第三方的图片加载器

--- a/app/src/main/res/layout/inschool_society_view.xml
+++ b/app/src/main/res/layout/inschool_society_view.xml
@@ -15,4 +15,9 @@
             android:layout_height="wrap_content" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/title_douban"
+        android:text="111111111"/>
 </LinearLayout>
