--- a/app/src/main/res/layout/talk_view.xml
+++ b/app/src/main/res/layout/talk_view.xml
@@ -26,7 +26,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="注册" />
+                android:text="话题圈"
+                android:textSize="20sp" />
         </RelativeLayout>
 
 
