--- a/app/src/main/res/layout/topic_mid_item.xml
+++ b/app/src/main/res/layout/topic_mid_item.xml
@@ -5,17 +5,17 @@
     android:orientation="vertical">
 
     <ImageView
-        android:src="@drawable/life_beautiful_girl"
         android:id="@+id/topic_mid_image"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/life_play_img1" />
 
     <TextView
-        android:layout_weight="4"
         android:id="@+id/topic_mid_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="新闻标题" />
 
 </LinearLayout>
