--- a/app/src/main/res/layout/taoyu.xml
+++ b/app/src/main/res/layout/taoyu.xml
@@ -3,12 +3,12 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
-    <include
-        layout="@layout/taoyu_title"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/taoyufragment">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -23,7 +23,8 @@
         android:layout_weight="2.5">
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:id="@+id/touxiang"/>
     </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,14 +34,16 @@
             android:orientation="vertical"
             android:layout_weight="1">
 
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="18838970227"/>
-            <EditText
+                android:text="18838970227"
+                android:id="@+id/phone"/>
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="XXX天前"/>
+                android:text="XXX天前"
+                android:id="@+id/time"/>
 
         </LinearLayout>
     <LinearLayout
@@ -52,11 +55,12 @@
             android:layout_height="match_parent"
             android:text="¥"
             android:layout_gravity="right"/>
-        <EditText
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="36.00"
-            android:layout_gravity="right"/>
+            android:layout_gravity="right"
+            android:id="@+id/price"/>
     </LinearLayout>
 </LinearLayout>
 
@@ -76,7 +80,8 @@
           >
           <ImageView
               android:layout_width="match_parent"
-              android:layout_height="match_parent" />
+              android:layout_height="match_parent"
+              android:id="@+id/taoyuimag"/>
       </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -110,7 +115,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:layout_weight="0.05">
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="雨天"/>
@@ -150,7 +155,8 @@
           android:layout_marginLeft="5dp"
           android:layout_marginTop="5dp"
           android:textSize="15dp"
-          android:text="位置"/>
+          android:text="位置"
+          android:id="@+id/position"/>
         </LinearLayout>
             <LinearLayout
             android:layout_width="match_parent"
@@ -169,7 +175,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="0"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:id="@+id/zan"/>
 
 
         </LinearLayout>
@@ -178,6 +185,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
             android:orientation="horizontal"
             android:layout_weight="3">
 
@@ -186,13 +194,15 @@
                 android:layout_height="wrap_content"
                 android:scaleType="centerInside"
                 android:layout_gravity="right"
+                android:background="@drawable/comment"
 
                 />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="0"/>
+                android:text="0"
+                android:id="@+id/comment"/>
 
 
         </LinearLayout>
