2017/04/04 继续优化了界面，实现所有界面沉浸。 下一步将用MVP模式进行重构。

--- a/app/src/main/res/layout/login_title_view.xml
+++ b/app/src/main/res/layout/login_title_view.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0.5dp"
-            android:id="@+id/reg_title_back"
+            android:id="@+id/login_title_back"
             android:src="@drawable/fragment_back" />
     </LinearLayout>
     <LinearLayout
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
-            android:text="注册"
+            android:text="登录"
             android:textSize="20sp"/>
     </LinearLayout>
 
