--- a/app/src/main/res/layout/main_my_title_view.xml
+++ b/app/src/main/res/layout/main_my_title_view.xml
@@ -3,16 +3,9 @@
     android:id="@+id/main_title"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fffffc">
+   >
 
-    <ImageView
-        android:id="@+id/my_title_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="0.5dp"
-        android:src="@drawable/fragment_back" />
+
 
     <TextView
         android:id="@+id/my_title_text"
@@ -20,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
+        android:textSize="20sp"
         android:text="我的" />
 
 </RelativeLayout>
