--- a/app/src/main/res/layout/taoyu_title.xml
+++ b/app/src/main/res/layout/taoyu_title.xml
@@ -3,7 +3,8 @@
     android:id="@+id/main_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#fffffc">
+    android:background="#fffffc"
+    android:paddingTop="30dp">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,7 +18,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="44dp"
+        android:layout_height="match_parent"
         android:layout_weight="6"
         android:gravity="center">
         <TextView
@@ -26,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
             android:text="淘渔"
-            android:textSize="25sp"/>
+            android:textSize="20dp"/>
     </LinearLayout>
 
 
