--- a/app/src/main/res/layout/userlogin_fragment.xml
+++ b/app/src/main/res/layout/userlogin_fragment.xml
@@ -17,9 +17,9 @@
             android:id="@+id/my_user_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+           >
 
-            <include layout="@layout/main_my_title_view" />
+            <include layout="@layout/login_title_view" />
         </LinearLayout>
 
         <LinearLayout
