--- a/app/src/main/res/layout/school_news_title.xml
+++ b/app/src/main/res/layout/school_news_title.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0.5dp"
-            android:id="@+id/my_title_back"
+            android:id="@+id/news_title_back"
             android:src="@drawable/fragment_back" />
     </LinearLayout>
     <LinearLayout
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
-            android:text="个人资料"
+            android:text="新闻"
             android:textSize="20sp"/>
     </LinearLayout>
 
