--- a/app/src/main/res/layout/play_item_top.xml
+++ b/app/src/main/res/layout/play_item_top.xml
@@ -90,76 +90,76 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_gravity="right"
                 android:id="@+id/play_user_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="right"
                 android:layout_weight="1"
                 android:src="@drawable/life_share" />
 
             <LinearLayout
-                android:layout_margin="1dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="1dp"
                 android:layout_weight="1">
 
                 <ImageView
-                    android:layout_weight="1"
-                    android:src="@drawable/prise"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/prise" />
 
                 <TextView
-                    android:layout_marginLeft="5dp"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:text="110"
                     android:id="@+id/play_nice"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="110" />
 
                 <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:src="@drawable/comment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:src="@drawable/comment" />
 
                 <TextView
-                    android:layout_marginLeft="5dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:text="200"
-                    android:gravity="center"
                     android:id="@+id/play_talk"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="200" />
             </LinearLayout>
         </LinearLayout>
 
     </RelativeLayout>
 
     <TextView
-        android:layout_margin="5dp"
-        android:textColor="#000"
-        android:text="新闻大标题1111111"
         android:id="@+id/play_user_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="新闻大标题1111111"
+        android:textColor="#000" />
 
     <LinearLayout
-        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/play_news_title"
-            android:text="新闻小标题222"
-            android:textSize="12sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="新闻小标题222"
+            android:textSize="12sp" />
 
         <ImageView
             android:id="@+id/play_news_image"
