--- a/app/src/main/res/layout/school_news_comments_title.xml
+++ b/app/src/main/res/layout/school_news_comments_title.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:hint="写下你的态度"
             android:textSize="10sp"
-
+            android:windowSoftInputMode="stateHidden"
             />
     </LinearLayout>
 
