--- a/app/src/main/res/layout/userlogin_fragment.xml
+++ b/app/src/main/res/layout/userlogin_fragment.xml
@@ -6,11 +6,19 @@
     android:orientation="vertical"
     android:background="@drawable/login_bg"
    >
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
 
         <LinearLayout
@@ -68,6 +76,7 @@
                     android:src="@drawable/login_pass" />
 
                 <EditText
+                    android:inputType="textPassword"
                     android:id="@+id/user_reg_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -142,4 +151,5 @@
 
 
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
