--- a/app/src/main/res/layout/usersingup_fragment.xml
+++ b/app/src/main/res/layout/usersingup_fragment.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_bg"
     android:orientation="vertical">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -179,4 +181,5 @@
 
 
     </LinearLayout>
+</ScrollView>
 </RelativeLayout>
