--- a/app/src/main/res/layout/play_item_top.xml
+++ b/app/src/main/res/layout/play_item_top.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="2dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -28,6 +30,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/play_hot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -41,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:layout_marginTop="1dp"
         android:orientation="horizontal">
 
 
