--- a/app/src/main/res/layout/play_teg_view.xml
+++ b/app/src/main/res/layout/play_teg_view.xml
@@ -39,6 +39,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/play_together_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1" />
 </LinearLayout>
