--- a/app/src/main/res/layout/play_item_end.xml
+++ b/app/src/main/res/layout/play_item_end.xml
@@ -6,10 +6,9 @@
     android:orientation="vertical">
 
     <LinearLayout
-
+        android:id="@+id/play_end_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -160,27 +159,33 @@
 
                 <LinearLayout
                     android:id="@+id/play_group_info_images"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/play_group_info_image1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shape_image"
                         android:src="@drawable/test_person_01" />
 
                     <ImageView
                         android:id="@+id/play_group_info_image2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shape_image"
                         android:src="@drawable/test_person_03" />
 
                     <ImageView
                         android:id="@+id/play_group_info_image3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shape_image"
                         android:src="@drawable/test_person_06" />
                 </LinearLayout>
 
