--- a/app/src/main/res/layout/play_item_top.xml
+++ b/app/src/main/res/layout/play_item_top.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/play_top_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -114,7 +114,7 @@
                 android:layout_weight="1">
 
                 <ImageView
-
+                    android:id="@+id/play_nice_image"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_weight="1"
@@ -131,6 +131,7 @@
                     android:text="110" />
 
                 <ImageView
+                    android:id="@+id/play_talk_image"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginLeft="10dp"
@@ -160,6 +161,7 @@
         android:textColor="#000" />
 
     <LinearLayout
+        android:id="@+id/play_top_news"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
