2017/04/13 1、掏鱼显示商品列表的网络操作完成。但有未知bug存在。 2、一起玩界面已经完成，bug已经修复。 3、下一步将进行掏鱼的搜索以及分类的网络操作。 4、将进行表白墙界面的显示以及网络操作。 2017/04/12 1、掏鱼界面开始 2、修复bug
2017/04/09
1、学校首页与服务端进行了对接，基本完善，二级界面正在开发。
2、更新了淘鱼界面的代码以及网络操作所需要的实体类。
3、完善了新闻主界面直接弹出输入法的行为，但未解决怎样使输入框在输入法的上方。
4、一起玩界面正在进行，相关代码已经上传，但未实现功能。

--- a/app/src/main/res/layout/taoyu.xml
+++ b/app/src/main/res/layout/taoyu.xml
@@ -78,10 +78,11 @@
           android:layout_height="match_parent"
           android:layout_weight="1"
           >
+
           <ImageView
+              android:id="@+id/taoyuimag"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:id="@+id/taoyuimag"/>
+              android:layout_height="match_parent" />
       </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -89,7 +90,9 @@
             android:layout_weight="1"
             android:layout_marginLeft="10dp"
             >
+
             <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>  <LinearLayout
@@ -98,7 +101,9 @@
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
         >
+
         <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
