一起玩群组界面完成，下步时间和活动处理

--- a/app/src/main/res/layout/play_group.xml
+++ b/app/src/main/res/layout/play_group.xml
@@ -10,11 +10,13 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:layout_weight="4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <RelativeLayout
+                android:layout_weight="2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -35,8 +37,9 @@
             </RelativeLayout>
 
             <LinearLayout
+                android:layout_weight="4"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:layout_marginTop="1dp">
 
                 <RelativeLayout
@@ -95,6 +98,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_weight="2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -123,6 +127,7 @@
             android:layout_height="1dp" />
 
         <LinearLayout
+            android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -150,10 +155,11 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_weight="1"
                 android:id="@+id/group_users"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:orientation="horizontal">
 
                 <com.gjf.lovezzu.view.CircleImageView
@@ -199,17 +205,20 @@
             android:layout_height="10dp" />
 
         <LinearLayout
+            android:layout_weight="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
+                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:orientation="horizontal">
 
                 <TextView
+                    android:layout_marginLeft="8dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="群空间"
@@ -226,6 +235,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_weight="2"
                 android:id="@+id/group_space"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -270,68 +280,221 @@
                     android:layout_weight="1"
                     android:src="@drawable/right_arrow" />
             </LinearLayout>
+
             <include
                 layout="@layout/item_cut"
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
+
             <LinearLayout
-                android:layout_margin="5dp"
                 android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:orientation="vertical">
+
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="入群条件"
-                    android:textSize="12.5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textSize="12.5dp" />
+
                 <TextView
-                    android:layout_margin="5dp"
                     android:id="@+id/group_join_request"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:text="我不是网红我不是网红我不是网红我不是网红我不是网红我不是网红我不是网红我不是网红我不是网红我不是网红"
-                    android:textSize="11sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textSize="11sp" />
             </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <include
+            layout="@layout/item_cut"
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
 
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="群分类"
+                android:textSize="12.5sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/group_tag_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="运动-篮球"
+                    android:textColor="#214bf4"
+                    android:textSize="11sp" />
+            </LinearLayout>
         </LinearLayout>
 
+        <include
+            layout="@layout/item_cut"
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_weight="3"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_weight="3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="群主"
+                    android:textSize="12.5sp" />
+
+                <LinearLayout
+                    android:id="@+id/group_master_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
+                    <com.gjf.lovezzu.view.CircleImageView
+                        android:id="@+id/group_master_image"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/test_person_03" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="2"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/group_master_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="北城之春"
+                                android:textColor="#000"
+                                android:textSize="11sp" />
+
+                            <TextView
+                                android:id="@+id/group_master_time"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:text="一天前"
+                                android:textSize="10sp" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:src="@drawable/right_arrow" />
+                </LinearLayout>
             </LinearLayout>
+
+            <include
+                layout="@layout/item_cut"
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
 
             <LinearLayout
+                android:layout_weight="1"
+                android:layout_margin="10dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="地址"
+                    android:textSize="12.5sp" />
+
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/group_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="郑州大学北校区"
+                    android:textSize="11sp" />
             </LinearLayout>
+
+            <include
+                layout="@layout/item_cut"
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
 
             <LinearLayout
+                android:layout_weight="1"
+                android:layout_margin="10dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="其他信息"
+                    android:textSize="12.5sp" />
+
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/group_other_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="创建时间。。。"
+                    android:textSize="11sp" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            <include
+                layout="@layout/item_cut"
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/group_join"
+                android:layout_weight="2"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:layout_margin="5dp"
+                android:background="#287bf7"
+                android:gravity="center"
+                android:text="加入群组"
+                android:textColor="#fff" />
         </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
