一起玩群组界面完工，数据待商议

--- a/app/src/main/res/layout/play_group.xml
+++ b/app/src/main/res/layout/play_group.xml
@@ -21,6 +21,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:id="@+id/back_activity"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_centerVertical="true"
@@ -111,6 +112,7 @@
                     android:textSize="12.5sp" />
 
                 <TextView
+                    android:id="@+id/group_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
