--- a/app/src/main/res/layout/play_group.xml
+++ b/app/src/main/res/layout/play_group.xml
@@ -38,40 +38,29 @@
             </RelativeLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_marginTop="1dp"
                 android:layout_weight="4">
 
-                <RelativeLayout
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
 
-                        <ImageView
-                            android:id="@+id/group_image"
-                            android:layout_width="match_parent"
-                            android:layout_height="fill_parent"
-                            android:src="@drawable/group_act_img" />
-                    </LinearLayout>
+                    <ImageView
+                        android:id="@+id/group_image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        />
 
-                    <LinearLayout
-                        android:id="@+id/center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:orientation="vertical" />
 
                     <LinearLayout
                         android:id="@+id/linearLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_below="@id/center"
-                        android:layout_margin="5dp"
+                        android:layout_gravity="bottom"
+                        android:layout_margin="10dp"
                         android:orientation="vertical"
                         android:paddingTop="20dp">
 
@@ -95,7 +84,7 @@
                             android:textColor="#ef2360"
                             android:textSize="13sp" />
                     </LinearLayout>
-                </RelativeLayout>
+                </FrameLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -385,11 +374,11 @@
                         android:src="@drawable/test_person_03" />
 
                     <LinearLayout
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
                         android:layout_margin="10dp"
+                        android:layout_weight="3"
                         android:orientation="horizontal">
 
                         <LinearLayout
