--- a/app/src/main/res/layout/tree_hole_view.xml
+++ b/app/src/main/res/layout/tree_hole_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -63,15 +62,14 @@
                 android:layout_weight="1" />
         </android.support.v4.widget.SwipeRefreshLayout>
 
-        <android.support.design.widget.FloatingActionButton
+        <ImageView
             android:id="@+id/tree_fab"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             android:src="@drawable/pub_tree"
-            app:backgroundTint="#ccffffff"
-            app:elevation="0dp" />
+            />
 
     </FrameLayout>
 
